// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PgpmPackage.writeModulePlan writes a clean plan to disk for a module (no projects) 1`] = `
"%syntax-version=1.0.0
%project=secrets
%uri=secrets
procedures/secretfunction 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/secretfunction"
`;

exports[`PgpmPackage.writeModulePlan writes a clean plan to disk for a module (with projects) 1`] = `
"%syntax-version=1.0.0
%project=secrets
%uri=secrets
procedures/secretfunction [totp:procedures/generate_secret pg-verify:procedures/verify_view] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/secretfunction"
`;

exports[`PgpmPackage.writeModulePlan writes a plan for a dependency-heavy module (totp) 1`] = `
"%syntax-version=1.0.0
%project=totp
%uri=totp
procedures/generate_secret [pg-verify:procedures/verify_view] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/generate_secret"
`;

exports[`PgpmPackage.writeModulePlan writes a plan with project references (utils) 1`] = `
{
  "ctrl": "# pg-verify extension
comment = 'pg-verify extension'
default_version = '0.0.1'
module_pathname = '$libdir/pg-verify'
requires = 'some-native-module,pg-utilities'
relocatable = false
superuser = false
",
  "deps": {
    "modules": [
      "pg-utilities",
    ],
    "native": [
      "some-native-module",
    ],
  },
  "make": "EXTENSION = pg-verify
DATA = sql/pg-verify--0.0.1.sql

PG_CONFIG = pg_config
PGXS := $(shell $(PG_CONFIG) --pgxs)
include $(PGXS)
  ",
  "plan": "%syntax-version=1.0.0
%project=pg-verify
%uri=pg-verify
procedures/verify_view [pg-utilities:procedures/tg_update_timestamps] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_view
procedures/verify_type 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_type
procedures/verify_trigger 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_trigger
procedures/verify_table_grant 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_table_grant
procedures/verify_table 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_table
procedures/verify_security 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_security
procedures/verify_schema 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_schema
procedures/verify_role 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_role
procedures/verify_policy 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_policy
procedures/verify_membership 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_membership
procedures/verify_index 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_index
procedures/verify_function 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_function
procedures/verify_extension 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_extension
procedures/verify_domain 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_domain
procedures/verify_constraint 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add procedures/verify_constraint",
  "required": [
    "some-native-module",
    "pg-utilities",
  ],
}
`;
